# HathiZip

./: CHANGELOG.rst  Jenkinsfile  MANIFEST.in  README.rst  pyproject.toml  requirements-ci.txt  requirements-dev.txt  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/workflows/: tox_matrix.yml
ci/docker/python/linux/jenkins/: Dockerfile
ci/docker/python/linux/testing/: Dockerfile
ci/docker/python/linux/tox/: Dockerfile
ci/docker/python/windows/tox/: Dockerfile
ci/docker/shared/: requirements-ci.txt
ci/jenkins/: plugins.txt
ci/jenkins/scripts/: devpi.groovy  packaging.groovy  sonarqube.groovy  tox.groovy
docs/source/: conf.py
hathizip/: cli.py  process.py
requirements/: requirements-ci-freeze.txt  requirements-ci.txt  requirements-dev-freeze.txt  requirements-dev.in  requirements-dev.txt
src/hathizip/: __main__.py  configure_logging.py
tests/: test_cli.py  test_configure_logging.py  test_utils.py
vars/: runJenkinsPipeline.groovy
