[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HathiZip"
version = "0.1.12.dev0"
requires-python = ">=3.9"
readme = "README.rst"
license = "NCSA"
license-files = ["LICENSE"]
authors = [
    {name = "University Library at The University of Illinois at Urbana Champaign: Preservation Services", email = "prescons@library.illinois.edu"},
]
maintainers = [
    {name = "Henry Borchers", email = "hborcher@illinois.edu"}
]
description = "Creates .zip file packages for HathiTrust. Replacement script for HathiTrust Zip and Submit."
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Archiving :: Compression",
]

[project.urls]
Documentation = "https://www.library.illinois.edu/dccdocs/hathi_zip/"
Download = "https://github.com/UIUCLibrary/HathiZip"

[tool.setuptools]
packages = [
    "hathizip",
]
zip-safe = false

[tool.setuptools.package-data]
hathizip = ["py.typed"]

[project.scripts]
hathivalidate = "hathizip.__main__:main"

[tool.coverage.run]
branch = true
source = ["hathizip"]
relative_files = true

[tool.coverage.paths]
source = ["hathizip"]

[tool.coverage.report]
exclude_lines =[
    "if TYPE_CHECKING:"
]

[tool.cibuildwheel]
build = "*"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = [
    "tests"
]

